fix color contrast on text warning

--- a/avUi/global.less
+++ b/avUi/global.less
@@ -24,7 +24,7 @@ a:hover, a:active {
 }
 
 .text-brand-warning {
-  color: @brand-warning;
+  color: @av-warning-color;
 }
 
 .text-brand-danger {
